--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -25,11 +25,9 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: |
-            shuheikawamura243/gin-api:latest
-            shuheikawamura243/gin-api:${{ github.sha }}
+          tags: shuheikawamura243/gin-api:${{ github.sha }}
