--- a/.github/workflows/sync-gateway-setting.yaml
+++ b/.github/workflows/sync-gateway-setting.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Setup inso cli
-        uses: kong/setup-inso@v2.1.0
+        uses: kong/setup-inso@33b1006a5c2ae15364fc18146ec900b7db3c675e # v2.1.0
         with:
           inso-version: 11.0.0
           compression: tar.xz
