--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - app
+  workflow_dispatch:
 
 jobs:
   build-and-push:
@@ -27,7 +30,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          context: .
+          context: ./app
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
